--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Foccu.id</title>
   </head>
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg py-4 navbar-dark fixed-top" style="background-color: #2cc8ea">
       <div class="container">
-        <a class="navbar-brand" href="#home"><img src="/img/logo toyota 4.0 (no 3D).png" alt="" width="60" height="60" class="d-inline-block align-text-center" /><strong>FOCCU</strong></a>
+        <a class="navbar-brand" href="#home"><img src="./img/logo toyota 4.0 (no 3D).png" alt="" width="60" height="60" class="d-inline-block align-text-center" /><strong>FOCCU</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -60,7 +60,7 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
         <div class="col-md-4">
-          <img src="/img/—Pngtree—business discussion and brainstorming concept_5293782.png" class="rounded float-end" alt="" width="300" />
+          <img src="./img/—Pngtree—business discussion and brainstorming concept_5293782.png" class="rounded float-end" alt="" width="300" />
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -111,7 +111,7 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-6 mb-4 shadow p-3 mb-5 rounded">
             <div class="card">
-              <img src="/img/Projects2.jpg" class="card-img-top" alt="Graphic Design" />
+              <img src="./img/Projects2.jpg" class="card-img-top" alt="Graphic Design" />
               <div class="card-body">
                 <h5 class="card-title">Graphic Design</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -121,7 +121,7 @@
           </div>
           <div class="col-md-6 mb-4 shadow p-3 mb-5 rounded">
             <div class="card">
-              <img src="/img/Projects1.jpg" class="card-img-top" alt="Graphic Design" />
+              <img src="./img/Projects1.jpg" class="card-img-top" alt="Graphic Design" />
               <div class="card-body">
                 <h5 class="card-title">Web Development</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -150,21 +150,21 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/Projects2.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/Projects2.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/img/mak-KOlIhG2XN2U-unsplash.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/mak-KOlIhG2XN2U-unsplash.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
             <p>Some representative placeholder content for the second slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/Projects1.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/Projects1.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
