--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 <body id="home">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg py-4 navbar-dark fixed-top" style="background-color: #2cc8ea">
+  <nav class="navbar navbar-expand-lg py-2 shadow p-3 mb-5 body rounded navbar-dark fixed-top"
+    style="background-color: #2cc8ea">
     <div class="container">
-      <a class="navbar-brand" href="#home"><img src="./img/logo toyota 4.0 (no 3D).png" alt="" width="60" height="60"
+      <a class="navbar-brand" href="#home"><img src="/img/logo toyota 4.0 (no 3D).png" alt="" width="60" height="60"
           class="d-inline-block align-text-center" /><strong>FOCCU</strong></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,15 +38,15 @@
             <a class="nav-link" href="#About">About Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Projects" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#Projects" id="navbarDropdownMenuLink" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">Our Projects</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Web Development</a></li>
-              <li><a class="dropdown-item" href="#">Graphic Design</a></li>
+              <li><a class="dropdown-item" href="#webdev">Web Development</a></li>
+              <li><a class="dropdown-item" href="#graphicdesign">Graphic Design</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#carouselExampleCaptions">Testimony</a>
+            <a class="nav-link" href="#testimony">Testimony</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Contact">Contacts</a>
@@ -68,7 +69,7 @@
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
       <div class="col-md-4">
-        <img src="./img/—Pngtree—business discussion and brainstorming concept_5293782.png" class="rounded float-end"
+        <img src="/img/—Pngtree—business discussion and brainstorming concept_5293782.png" class="rounded float-end"
           alt="" width="300" />
       </div>
     </div>
@@ -173,7 +174,7 @@
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center">
+      <div class="row justify-content-center fs-5 text-center" id="graphicdesign">
         <div class="col-md-6 mb-4 shadow p-3 mb-5 rounded">
           <div class="card">
             <img src="./img/Projects2.jpg" class="card-img-top" alt="Graphic Design" />
@@ -185,7 +186,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 mb-4 shadow p-3 mb-5 rounded">
+        <div class="col-md-6 mb-4 shadow p-3 mb-5 rounded" id="webdev">
           <div class="card">
             <img src="./img/Projects1.jpg" class="card-img-top" alt="Graphic Design" />
             <div class="card-body">
@@ -207,7 +208,7 @@
   <!-- End Our Projects -->
 
   <!-- Testimony -->
-  <section>
+  <section id="testimony">
     <div class="text-center mt-5 pt-5 mb-5">
       <p class="fs-2 fw-bold">What People Are Saying</p>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -236,90 +237,50 @@
             </div>
           </div>
           <div class="carousel-item">
-          <div class="card text-center p-5 testi">
-            <img src="./img/profile-circle.png" class="testi-photo m-auto">
-            <div class="card-body">
-              <p class="card-title fs-4 text-white">Andi Basuki</p>
-              <p class="card-text pb-5 text-white small mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat
-              </p>
-          
+            <div class="card text-center p-5 testi">
+              <img src="./img/profile-circle.png" class="testi-photo m-auto">
+              <div class="card-body">
+                <p class="card-title fs-4 text-white">Andi Basuki</p>
+                <p class="card-text pb-5 text-white small mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                  commodo
+                  consequat
+                </p>
+
+              </div>
             </div>
-          </div>
           </div>
           <div class="carousel-item">
-          <div class="card text-center p-5 testi">
-            <img src="./img/profile-circle.png" class="testi-photo m-auto">
-            <div class="card-body">
-              <p class="card-title fs-4 text-white">Bambang Suseno</p>
-              <p class="card-text pb-5 text-white small">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat
-              </p>
-          
+            <div class="card text-center p-5 testi">
+              <img src="./img/profile-circle.png" class="testi-photo m-auto">
+              <div class="card-body">
+                <p class="card-title fs-4 text-white">Bambang Suseno</p>
+                <p class="card-text pb-5 text-white small">Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                  commodo
+                  consequat
+                </p>
+
+              </div>
             </div>
-          </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
           data-bs-slide="prev">
-          <span class="" aria-hidden="true"><i
-              class="fas fa-chevron-left text-dark fs-3"></i></span>
+          <span class="" aria-hidden="true"><i class="fas fa-chevron-left text-dark fs-3"></i></span>
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
           data-bs-slide="next">
-          <span class="" aria-hidden="true"><i
-              class="fas fa-chevron-right text-dark fs-3"></i></span>
+          <span class="" aria-hidden="true"><i class="fas fa-chevron-right text-dark fs-3"></i></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </div>
   </section>
-  <section id="carouselExampleCaptions" class="carousel slide d-none" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./img/Projects2.jpg" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./img/mak-KOlIhG2XN2U-unsplash.jpg" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="./img/Projects1.jpg" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </section>
+  
   <!-- End Testimony -->
 
   <!-- Contacts -->
