fix: image link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg py-2 shadow p-3 mb-5 body rounded navbar-dark fixed-top"
     style="background-color: #2cc8ea">
     <div class="container">
-      <a class="navbar-brand" href="#home"><img src="/img/logo toyota 4.0 (no 3D).png" alt="" width="60" height="60"
+      <a class="navbar-brand" href="#home"><img src="./img/logo toyota 4.0 (no 3D).png" alt=""  height="60"
           class="d-inline-block align-text-center" /><strong>FOCCU</strong></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
       <div class="col-md-4">
-        <img src="/img/—Pngtree—business discussion and brainstorming concept_5293782.png" class="rounded float-end"
+        <img src="./img/—Pngtree—business discussion and brainstorming concept_5293782.png" class="rounded float-end"
           alt="" width="300" />
       </div>
     </div>
